image paths to static

--- a/workshop-slides.ipynb
+++ b/workshop-slides.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "<pre>Edward Yang    Michael Milton    Julie Iskander</pre><br />\n",
     "\n",
-    "<img src=\"Downloads/1200px-Slurm_logo.svg.png\" alt=\"Slurm\" width=\"100\"/><img src=\"Downloads/milton.png\" alt=\"Milton Mascot\" width=\"100\"/><img src=\"Downloads/WEHI_RGB_logo.png\" alt=\"WEHI logo\" width=\"200\"/>"
+    "<img src=\"static/1200px-Slurm_logo.svg.png\" alt=\"Slurm\" width=\"100\"/><img src=\"static/milton.png\" alt=\"Milton Mascot\" width=\"100\"/><img src=\"static/WEHI_RGB_logo.png\" alt=\"WEHI logo\" width=\"200\"/>"
    ]
   },
   {
