--- a/workshop-slides.ipynb
+++ b/workshop-slides.ipynb
@@ -11,9 +11,11 @@
     "# Intermediate Slurm on Milton\n",
     "### Delivered by WEHI Research Computing Platform\n",
     "\n",
-    "<pre>Edward Yang    Michael Milton    Julie Iskander</pre><br />\n",
+    "<pre>Edward Yang    Michael Milton    Julie Iskander</pre><br>\n",
     "\n",
-    "<img src=\"static/1200px-Slurm_logo.svg.png\" alt=\"Slurm\" width=\"100\"/><img src=\"static/milton.png\" alt=\"Milton Mascot\" width=\"100\"/><img src=\"static/WEHI_RGB_logo.png\" alt=\"WEHI logo\" width=\"200\"/>"
+    "<img src=\"static/1200px-Slurm_logo.svg.png\" alt=\"Slurm\" width=\"100\"/>\n",
+    "<img src=\"static/milton.png\" alt=\"Milton Mascot\" width=\"100\"/>\n",
+    "<img src=\"static/WEHI_RGB_logo.png\" alt=\"WEHI logo\" width=\"200\"/>"
    ]
   },
   {
@@ -189,10 +191,40 @@
     "\n",
     "### What are Nodes?\n",
     "Nodes are essentially standalone computers with their own CPU cores, RAM, local storage, and maybe GPUs. \n",
+    "<br>\n",
+    "<img src=\"static/node-diagram.png\" alt=\"Node diagram\" width=\"400\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Laying the Groundwork: Nodes, Tasks and Other Slurm Stuff cont.\n",
     "\n",
-    "HPC clusters (or just clusters) will consist of multiple nodes connected together through a (sometimes fast) network.\n",
+    "HPC clusters (or just clusters) will consist of multiple nodes connected together through a (sometimes fast) network. <br>\n",
+    "<img src=\"static/cluster-diagram.png\" alt=\"Cluster diagram\" width=\"400\">\n",
+    "<img src=\"static/shared-storage-diagram.png\" alt=\"Shared storage diagram\" width=\"400\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Laying the Groundwork: Nodes, Tasks and Other Slurm Stuff cont.\n",
     "\n",
-    "Nodes cannot collaborate on problems unless they are running a programmed designed that way. An analogy would be like trying to issue commands from your PC, but trying to use your colleagues CPUs. It's possible, but needs a special program/protocol to do so!\n",
+    "Nodes cannot collaborate on problems unless they are running a programmed designed that way.\n",
+    "\n",
+    "It's like clicking your mouse on your PC, and expecting the click to register on a colleague's PC. \n",
+    "\n",
+    "It's possible, but needs a special program/protocol to do so!\n",
     "\n",
     "Most programs in bioinformatics, health sciences, and statistics (that I know of) aren't setup to have multiple nodes cooperate. Notable exceptions are Tensorflow and Py-Torch, Relion, and Gromacs."
    ]
@@ -208,7 +240,9 @@
     "## Laying the Groundwork: Nodes, Tasks and Other Slurm Stuff cont.\n",
     "\n",
     "### What are tasks?\n",
-    "Tasks are a collection of resources (CPU cores, GPUs) expected to perform the same \"task\", or used by a single program e.g., via threads, Python multiprocessing, or OpenMP."
+    "Tasks are a collection of resources (CPU cores, GPUs) expected to perform the same \"task\", or used by a single program e.g., via threads, Python multiprocessing, or OpenMP.\n",
+    "\n",
+    "<img src=\"static/tasks-diagram1.png\" alt=\"Tasks diagram\" width=\"400\">"
    ]
   },
   {
