split large slides

--- a/workshop-slides.ipynb
+++ b/workshop-slides.ipynb
@@ -1139,7 +1139,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "## Basic Job Monitoring and Profiling cont.\n",
     "#### Historical data: GPU activity\n",
@@ -1647,7 +1651,7 @@
    "source": [
     "This feature is especially useful when submitting jobs inside wrapper scripts.\n",
     "\n",
-    "You can also use the `--export-file` option to specify a file with a list of `export VAR=value` pairs that you wish the script to use."
+    "You can also use the `--export-file` option to specify a file with a list of `VAR=value` pairs that you wish the script to use."
    ]
   },
   {
