Add job dependancy example

--- a/workshop-slides.ipynb
+++ b/workshop-slides.ipynb
@@ -1092,12 +1092,14 @@
     "<div style='text-align: right'>Basic Job Monitoring and Profiling 8</div>\n",
     "\n",
     "#### Historical data: CPU and memory utilization\n",
-    "The `seff` command shows the memory and CPU utilization of a job that has <strong>ended</strong>`"
+    "The `seff` command summarizes memory and CPU utilization of a job.\n",
+    "\n",
+    "It's mainly useful for job steps that have ended."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1136,9 +1138,11 @@
    "source": [
     "<div style='text-align: right'>Basic Job Monitoring and Profiling 9</div>\n",
     "\n",
-    "`sacct` is a general job history querying command-line tool that can provide lots of information about your _past_ jobs.\n",
+    "`sacct` is a job history querying command that can provide lots of information about your _past_ jobs.\n",
     "\n",
-    "<strong>Note</strong>: `sacct` data can take a few minutes to be updated, so is best for jobs that have finished."
+    "<strong>Note</strong>: `sacct` data can take a few minutes to be updated, so is best for jobs that have finished.\n",
+    "\n",
+    "Like `squeue`, the default output is a limited, but can be augmented by the `--format` option."
    ]
   },
   {
@@ -1294,7 +1298,12 @@
     "* making use of job environments and interpreters (e.g. python or R)\n",
     "* submitting `sbatch` scripts without a script\n",
     "\n",
-    "We're going to start with a simple R script submitted by wrapper sbatch script:"
+    "We're going to start with our simple R script submitted by wrapper sbatch script \n",
+    "\n",
+    "```\n",
+    "demo-scripts/matmul.rscript\n",
+    "demo-scripts/submit-matmul.sh\n",
+    "```"
    ]
   },
   {
@@ -1331,30 +1340,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] \"starting the matmul R script!\"\n",
-      "[1] \"elem: 1000*1000 = 1e+06\"\n",
-      "Time difference of 0.06260109 secs\n"
-     ]
-    }
-   ],
    "source": [
+    "```bash\n",
     "#!/bin/bash\n",
     "## submit-matmul.sh\n",
-    "# Example sbatch script running Rscript\n",
-    "# Does a matmul\n",
-    "# rev0\n",
+    "# Example sbatch script exeucting R script that does a matmul\n",
     "\n",
     "#SBATCH --mem=8G\n",
     "#SBATCH --cpus-per-task=2\n",
@@ -1365,7 +1361,8 @@
     "# loading module for R\n",
     "module load R/openBLAS/4.2.1\n",
     "\n",
-    "Rscript matmul.rscript"
+    "Rscript matmul.rscript\n",
+    "```"
    ]
   },
   {
@@ -1388,14 +1385,34 @@
     "--mail-user=me@gmail.com\n",
     "--mail-type=ALL\n",
     "```\n",
-    "This sends emails to `me@gmail.com` when the job state changes. \n",
-    "\n",
+    "This sends emails to `me@gmail.com` when the job state changes. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
     "If you only want to know when your job goes through certain states, e.g. if it fails or is pre-empted but not when it starts or finishes:\n",
     "* BEGIN: job starts\n",
     "* END: job finishes successfully\n",
     "* FAIL: job fails\n",
     "* TIME_LIMIT: job reaches time limit\n",
     "* TIME_LIMIT_50/80/90: job reaches 50%/80%/90% of time limit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Excercise: add the `--mail-user` and `--mail-type` options to the `submit-matmul.sh` script"
    ]
   },
   {
@@ -1447,6 +1464,20 @@
     "This can be useful for testing, or implementing `sbatch` inside a script that manages your workflow.\n",
     "\n",
     "Note that `sbatch --wrap` infers which interpreter to use from your active environment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "The `--wrap` option could replace `submit-matmul.sh` by:\n",
+    "```\n",
+    "sbatch --ntasks=1 --cpus-per-task=2 --mem=8G --wrap=\"module load R/openBLAS/4.2.1; Rscript matmul.rscript\"\n",
+    "```"
    ]
   },
   {
@@ -1588,7 +1619,7 @@
    "source": [
     "<div style='text-align: right'>Sbatch scripting features 11</div>\n",
     "\n",
-    "### Job dependancies example: Recursive jobs\n",
+    "### Job dependancies example: Breaking up restartable jobs\n",
     "Recursive jobs are _one_ way to work with short QOS time limits.\n",
     "\n",
     "Multiple Slurm jobs are submitted with a sequential dependancy pattern, i.e., the second job depends on the first, the third job depends on the second and so on...\n",
@@ -1619,7 +1650,7 @@
     }
    ],
    "source": [
-    "cat demo-scripts/recursive-job.sh"
+    "cat demo-scripts/restartable-job.sh"
    ]
   },
   {
@@ -1668,10 +1699,15 @@
    ],
    "source": [
     "# cell to run recursive script\n",
-    "prereq_jobid=$(sbatch --parsable demo-scripts/recursive-job.sh)\n",
+    "SCRIPT=demo-scripts/recursive-job.sh\n",
+    "\n",
+    "# Initiate the loop\n",
+    "prereq_jobid=$(sbatch --parsable $SCRIPT)\n",
     "echo $prereq_jobid\n",
+    "\n",
+    "# Create 5 more dependant jobs with a loop\n",
     "for i in {1..5}; do\n",
-    "    prereq_jobid=$(sbatch --parsable --dependency=afterok:$prereq_jobid demo-scripts/recursive-job.sh)\n",
+    "    prereq_jobid=$(sbatch --parsable --dependency=afterany:$prereq_jobid $SCRIPT)\n",
     "    echo $prereq_jobid\n",
     "done\n",
     "squeue -u $USER"
@@ -1697,7 +1733,7 @@
     }
    },
    "source": [
-    "1. `prereq_jobid=$(sbatch --parsable demo-scripts/recursive-job.sh)`\n",
+    "1. `prereq_jobid=$(sbatch --parsable $SCRIPT)`\n",
     "    * Initial submit of recursive-job.sh\n",
     "    * uses the `--parsable` option to get the job id from `sbatch`\n",
     "    * the returned jobid is saved as `prereq_jobid`"
@@ -1728,6 +1764,70 @@
     "    * adds the `--dependency=afterok:${prereq_jobid}` option to link jobs\n",
     "    * `afterany` may be preferred instead of `afterok`\n",
     "    * the newly submitted jobid overwrites the `prereq_jobid` variable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<div style='text-align: right'>Sbatch scripting features 14</div>\n",
+    "\n",
+    "### Job dependancies example 2: recursive jobs\n",
+    "Instead of submitting all the jobs ahead of time, you can have a single Slurm scripts that submits itself until all the work is done (or it fails)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "```bash\n",
+    "#!/bin/bash\n",
+    "## recursive-job.sh\n",
+    "\n",
+    "#SBATCH --ntasks=1\n",
+    "#SBATCH --cpus-per-task=16\n",
+    "#SBATCH --mem-per-cpu=4G\n",
+    "#SBATCH --time=2-\n",
+    "#SBATCH --output=output-%j.log\n",
+    "#SBATCH --error=output-%j.log\n",
+    "#SBATCH --mail-user=me.m@wehi.edu.au\n",
+    "#SBATCH --mail-type=END,FAIL\n",
+    "\n",
+    "# Submitting a new job that depends on this one\n",
+    "sbatch --dependency=afternotok:${SLURM_JOBID} recursive-job.sh\n",
+    "\n",
+    "# srunning the command\n",
+    "srun flye [flags] --resume\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    " This job:\n",
+    " * submits a dependant/child job at the start\n",
+    "     * `afternotok` means the dependant job will only start if the current job **doesn't** complete successfully\n",
+    " * The `flye` command is expected to run for as long as it can, up to the 2 day wall time\n",
+    " * The dependant job will pick up where the previous one got up to\n",
+    " * `mail-type=END,FAIL` sends an email when the job either:\n",
+    "     * fails due to error (FAIL)\n",
+    "     * completes sucessfully (END)\n",
+    "     * but doesn't send an email if the job times out\n",
+    " * recursion continues until a job completes successfully\n",
+    " * may need intervention if the job repeatedly fails due to error."
    ]
   },
   {
