arrays and outputs

--- a/workshop-slides.ipynb
+++ b/workshop-slides.ipynb
@@ -2678,6 +2678,20 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "### Job arrays and email notifications\n",
+    "`--mail-type=ALL` will send notifications only for the entire job (not for each job task)\n",
+    "\n",
+    "passing `ARRAY_TASKS` will send emails for each array task. e.g. `--mail-type=BEGIN,ARRAY_TASKS` will send an email every time a job array task starts."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
