Clean references to non-existent scripts

--- a/workshop-slides.ipynb
+++ b/workshop-slides.ipynb
@@ -2141,28 +2141,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 52,
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#!/usr/bin/env Rscript\n",
-      "## matmul.rscript\n",
-      "\n",
-      "print(\"starting the matmul R script!\")\n",
-      "nrows = 1e3\n"
-     ]
-    }
-   ],
    "source": [
-    "cat demo-scripts/matmul-interpreter1.rscript | head -n 5"
+    "```R\n",
+    "#!/usr/bin/env Rscript\n",
+    "## matmul.rscript\n",
+    "\n",
+    "print(\"starting the matmul R script!\")\n",
+    "nrows = 1e3\n",
+    "...\n",
+    "```"
    ]
   },
   {
@@ -2375,33 +2368,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#!/usr/bin/env Rscript\n",
-      "#SBATCH --ntasks=1\n",
-      "#SBATCH --cpus-per-task=2\n",
-      "#SBATCH --mem=4G\n",
-      "#SBATCH --array=1-10\n",
-      "\n",
-      "## matmul.rscript\n",
-      "\n",
-      "print(\"starting the matmul R script!\")\n",
-      "paste(\"using\", Sys.getenv(\"SLURM_NTASKS\"), \"tasks\")\n"
-     ]
-    }
-   ],
    "source": [
-    "cat demo-scripts/matmul-array1.rscript | head"
+    "```R\n",
+    "#!/usr/bin/env Rscript\n",
+    "#SBATCH --ntasks=1\n",
+    "#SBATCH --cpus-per-task=2\n",
+    "#SBATCH --mem=4G\n",
+    "#SBATCH --array=1-10\n",
+    "\n",
+    "## matmul.rscript\n",
+    "\n",
+    "print(\"starting the matmul R script!\")\n",
+    "paste(\"using\", Sys.getenv(\"SLURM_NTASKS\"), \"tasks\")\n",
+    "...\n",
+    "```"
    ]
   },
   {
@@ -2425,33 +2411,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#!/usr/bin/env Rscript\n",
-      "#SBATCH --ntasks=1\n",
-      "#SBATCH --cpus-per-task=2\n",
-      "#SBATCH --mem=4G\n",
-      "#SBATCH --array=1-10\n",
-      "#SBATCH --output=Rmatmul-times-%A-%a.out\n",
-      "#SBATCH --error=Rmatmul-times-%A-%a.err\n",
-      "\n",
-      "## matmul.rscript\n",
-      "\n"
-     ]
-    }
-   ],
    "source": [
-    "cat demo-scripts/matmul-array2.rscript | head"
+    "```R\n",
+    "#!/usr/bin/env Rscript\n",
+    "#SBATCH --ntasks=1\n",
+    "#SBATCH --cpus-per-task=2\n",
+    "#SBATCH --mem=4G\n",
+    "#SBATCH --array=1-10\n",
+    "#SBATCH --output=Rmatmul-times-%A-%a.out\n",
+    "#SBATCH --error=Rmatmul-times-%A-%a.err\n",
+    "\n",
+    "## matmul.rscript\n",
+    "...\n",
+    "```"
    ]
   },
   {
@@ -2720,13 +2698,6 @@
     "\n",
     "Contact us at research.computing@wehi.edu.au for any kind of help related to computing and research!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
