--- a/workshop-slides.ipynb
+++ b/workshop-slides.ipynb
@@ -51,11 +51,35 @@
    "source": [
     "## Background\n",
     "* We already ran an \"intro to Slurm\" workshop (recording on RCP website)\n",
-    "* More \"advanced\" features of Slurm were highly requested\n",
-    "\n",
+    "* More \"advanced\" features of Slurm were highly requested"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* This workshop tries to explain concepts like \"tasks\", \"nodes\", and \"job steps\"\n",
+    "* It also moves beyond basic job submissions and tries to answer questions like:\n",
+    "    * How do I get more info on my jobs e.g., resource utilization?\n",
+    "    * What other Slurm features can I utulise to improve my workflows?\n",
+    "    * How do I handle embarassingly parallel jobs?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
     "### Target Audience\n",
     "* You've submitted quite a few jobs via `sbatch`\n",
-    "* You're familiar with resource requests. Like:\n",
+    "* You're familiar with making resource requests. Like:\n",
     "    * using `--ntasks` and `--cpus-per-task`\n",
     "    * using `--mem` and/or `--memory-per-cpu`\n",
     "* You're wondering whether your jobs are utilizing resources efficiently\n",
@@ -72,11 +96,23 @@
    "source": [
     "<div style=\"text-align: right\">Background</div>\n",
     "\n",
-    "My goal for the session is to teach you how to:\n",
-    "* get the status of the cluster\n",
-    "* get information about your jobs\n",
-    "* make use of `sbatch` scripting features\n",
-    "* Run emabarrasingly parallel tasks with job arrays"
+    "### Expected understanding\n",
+    "* Understanding of \"resources\" concept: CPUs, RAM/memory, Nodes, gres (GPUs)\n",
+    "\n",
+    "* Have used job submission commands\n",
+    "    * `srun    # executes a command/script/binary across tasks`\n",
+    "    * `salloc  # allocates resources to be used (interactively and/or via srun)`\n",
+    "    * `sbatch  # submits a script for later execution on requested resources`\n",
+    "\n",
+    "* awareness of resource request options\n",
+    "    * `--ntasks=             # \"tasks\" recognised by srun`\n",
+    "    * `--nodes=              # no. of nodes`\n",
+    "    * `--ntasks-per-node=    # tasks per node`\n",
+    "    * `--cpus-per-task=      # cpus per task`\n",
+    "    * `--mem=                # memory required for entire job`\n",
+    "    * `--mem-per-cpu=        # memory required for each CPU`\n",
+    "    * `--gres=               # \"general resource\" (i.e. GPUs)`\n",
+    "    * `--time=               # requested wall time`"
    ]
   },
   {
@@ -89,25 +125,19 @@
    "source": [
     "## Agenda for Today\n",
     "\n",
-    "1. <p style=\"color: blue\">Introduction & Housekeeping</p>\n",
-    "\n",
+    "1. <span style=\"color: blue\">Introduction & Housekeeping</span>\n",
     "\n",
     "2. Lunch\n",
     "\n",
-    "\n",
     "3. Laying the groundwork: nodes, tasks and other Slurm terminology\n",
-    "\n",
     "\n",
     "4. Understanding your jobs and the job queue\n",
     "\n",
-    "\n",
     "5. Basic job profiling\n",
-    "\n",
     "\n",
     "6. Slurm scripting features\n",
     "\n",
-    "\n",
-    "7. Embarrasingly parallel workflows with Slurm job arrays"
+    "7. Embarrasingly parallel workflows with Slurm job arrays\n"
    ]
   },
   {
@@ -152,41 +182,6 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "<div style=\"text-align: right\">Introduction and Housekeeping 2</div>\n",
-    "\n",
-    "### Expected understanding of\n",
-    "* Understanding of \"resources\" concept<br>\n",
-    "    * CPUs\n",
-    "    * RAM/memory\n",
-    "    * Nodes\n",
-    "    * gres (GPUs)\n",
-    "\n",
-    "\n",
-    "* Have used job submission commands\n",
-    "    * `srun    # executes a command/script/binary across tasks`\n",
-    "    * `salloc  # allocates resources to be used (interactively and/or via srun)`\n",
-    "    * `sbatch  # submits a script for later execution on requested resources`\n",
-    "\n",
-    "\n",
-    "* awareness of resource request options\n",
-    "    * `--ntasks=             # \"tasks\" recognised by srun`\n",
-    "    * `--nodes=              # no. of nodes`\n",
-    "    * `--ntasks-per-node=    # tasks per node`\n",
-    "    * `--cpus-per-task=      # cpus per task`\n",
-    "    * `--mem=                # memory required for entire job`\n",
-    "    * `--mem-per-cpu=        # memory required for each CPU`\n",
-    "    * `--gres=               # \"general resource\" (i.e. GPUs)`\n",
-    "    * `--time=               # requested wall time`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -196,7 +191,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Laying the Groundwork: Nodes, Tasks and Other Slurm Stuff\n",
     "\n",
@@ -207,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -244,7 +243,60 @@
    "source": [
     "<div style=\"text-align: right\">Nodes, Tasks and Other Slurm Stuff 3</div>\n",
     "\n",
-    "Nodes cannot collaborate on problems unless they are running a programmed designed that way."
+    "Typically, HPC is organised with login nodes, compute nodes, and some nodes that perform scheduling and storage duties.\n",
+    "<img src=\"static/simple-cluster-diagram.png\" alt=\"Example cluster architecture\" width=\"800\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<div style=\"text-align: right\">Nodes, Tasks and Other Slurm Stuff 4</div>\n",
+    "\n",
+    "<img src=\"static/simple-cluster-diagram-sshslurmlogin.png\" alt=\"ssh to login node\" width=\"800\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<div style=\"text-align: right\">Nodes, Tasks and Other Slurm Stuff 5</div>\n",
+    "\n",
+    "<img src=\"static/simple-cluster-diagram-sbatchscript.png\" alt=\"Example sbatch command\" width=\"800\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<div style=\"text-align: right\">Nodes, Tasks and Other Slurm Stuff 4</div>\n",
+    "\n",
+    "<img src=\"static/simple-cluster-diagram-sbatchnodes2script.png\" alt=\"Example sbatch command\" width=\"800\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<div style=\"text-align: right\">Nodes, Tasks and Other Slurm Stuff 6</div>\n",
+    "\n",
+    "Nodes cannot collaborate on problems unless they are running a program designed that way."
    ]
   },
   {
@@ -290,7 +342,7 @@
     }
    },
    "source": [
-    "<div style=\"text-align: right\">Nodes, Tasks and Other Slurm Stuff 4</div>\n",
+    "<div style=\"text-align: right\">Nodes, Tasks and Other Slurm Stuff 7</div>\n",
     "\n",
     "### So why are tasks useful/important?\n",
     "\n",
@@ -320,7 +372,7 @@
     }
    },
    "source": [
-    "<div style=\"text-align: right\">Nodes, Tasks and Other Slurm Stuff 5</div>\n",
+    "<div style=\"text-align: right\">Nodes, Tasks and Other Slurm Stuff 8</div>\n",
     "\n",
     "### What are tasks?\n",
     "Tasks are a collection of resources (CPU cores, GPUs) expected to perform the same \"task\", or used by a single program e.g., via threads, Python multiprocessing, or OpenMP.\n",
@@ -335,7 +387,7 @@
     }
    },
    "source": [
-    "<div style=\"text-align: right\">Nodes, Tasks and Other Slurm Stuff 6</div>\n",
+    "<div style=\"text-align: right\">Nodes, Tasks and Other Slurm Stuff 9</div>\n",
     "\n",
     "A task can only be given resources co-located on a node. <br>\n",
     "Multiple tasks requested by `sbatch` or `salloc` can be spread across multiple nodes (unless `--nodes=` is specified)."
@@ -377,7 +429,7 @@
     }
    },
    "source": [
-    "<div style=\"text-align: right\">Nodes, Tasks and Other Slurm Stuff 7</div>\n",
+    "<div style=\"text-align: right\">Nodes, Tasks and Other Slurm Stuff 10</div>\n",
     "\n",
     "### A review of launching jobs (`srun` vs `sbatch` and `salloc`)\n",
     "\n",
