Add diagram of ssh to compute node

--- a/workshop-slides.ipynb
+++ b/workshop-slides.ipynb
@@ -982,7 +982,7 @@
     "\n",
     "This requires matching jobs to processes on a node with `squeue` and `ssh`.\n",
     "\n",
-    "A bit of system understanding is also needed."
+    "<img src=\"static/simple-cluster-diagram-sshcompute.png\" alt=\"Cluster diagram ssh to node\" width=\"800\">"
    ]
   },
   {
