acknowledgement of country, reorganise breaks, highlight tasks neq CPUs, srun/batchhost concepts, srun inside salloc example

--- a/workshop-slides.ipynb
+++ b/workshop-slides.ipynb
@@ -26,18 +26,21 @@
     }
    },
    "source": [
+    "# Acknowledgment of Country"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## [OPTIONAL SLIDE] Self Introductions!\n",
     "\n",
-    "### Me\n",
-    "* Civil Engineer by training\n",
-    "* HPC by interest\n",
-    "* Specialise in parallel programming (MPI, OpenMP, CUDA)\n",
-    "* I use HPC to simulate fluid and granular flows\n",
-    "* Historically flat-white person, but moving to long Macs\n",
-    "\n",
-    "## How about you?\n",
-    "* name\n",
-    "* How you use Milton's HPC\n",
+    "* Your Name\n",
+    "* What you're using Milton's HPC for\n",
     "* Your coffee/tea order"
    ]
   },
@@ -97,7 +100,7 @@
     "<div style=\"text-align: right\">Background</div>\n",
     "\n",
     "### Expected understanding\n",
-    "* Understanding of \"resources\" concept: CPUs, RAM/memory, Nodes, gres (GPUs)\n",
+    "* Awareness of \"resources\": CPUs, RAM/memory, Nodes, gres (GPUs)\n",
     "\n",
     "* Have used job submission commands\n",
     "    * `srun    # executes a command/script/binary across tasks`\n",
@@ -127,15 +130,15 @@
     "\n",
     "1. <span style=\"color: blue\">Introduction & Housekeeping</span>\n",
     "\n",
-    "2. Lunch\n",
+    "2. Laying the groundwork: nodes, tasks and other Slurm terminology\n",
     "\n",
-    "3. Laying the groundwork: nodes, tasks and other Slurm terminology\n",
+    "3. Lunch (30mins)\n",
     "\n",
-    "4. Understanding your jobs and the job queue\n",
+    "4. Understanding your jobs and the job queue + 5min break\n",
     "\n",
-    "5. Basic job profiling\n",
+    "5. Basic job profiling + 5min break\n",
     "\n",
-    "6. Slurm scripting features\n",
+    "6. Slurm scripting features + 5min break\n",
     "\n",
     "7. Embarrasingly parallel workflows with Slurm job arrays\n"
    ]
@@ -172,21 +175,9 @@
     "* Put your hand up whenever you have a question or have an issue running things\n",
     "* Questions in the chat are welcome and will be addressed by helpers\n",
     "\n",
-    "Material is available here:\n",
-    "* slides: https://wehi-researchcomputing.github.io/intermediate-slurm-workshop\n",
-    "* material: https://github.com/WEHI-ResearchComputing/intermediate-slurm-workshop\n",
-    "    * the base demo scripts are in `demo-script`. We will build on these during the workshop"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# LUNCH"
+    "Material is available here: https://github.com/WEHI-ResearchComputing/intermediate-slurm-workshop\n",
+    "* Link to webpage in the README\n",
+    "* example scripts are in demo-scripts folder"
    ]
   },
   {
@@ -199,7 +190,7 @@
    "source": [
     "## Laying the Groundwork: Nodes, Tasks and Other Slurm Stuff\n",
     "\n",
-    "Reviewing cluster concepts and briefly explaining <strong>tasks</strong> and <strong>job step</strong> Slurm concepts"
+    "Reviewing cluster concepts and explaining <strong>tasks</strong>, <strong>job steps</strong>, and <strong>srun</strong> Slurm concepts"
    ]
   },
   {
@@ -243,7 +234,7 @@
    "source": [
     "<div style=\"text-align: right\">Nodes, Tasks and Other Slurm Stuff 3</div>\n",
     "\n",
-    "Typically, HPC is organised with login nodes, compute nodes, and some nodes that perform scheduling and storage duties.\n",
+    "Typically, HPC is organised with login nodes, compute nodes, and some nodes that perform scheduling and storage duties.<br>\n",
     "<img src=\"static/simple-cluster-diagram.png\" alt=\"Example cluster architecture\" width=\"800\">"
    ]
   },
@@ -258,6 +249,32 @@
     "<div style=\"text-align: right\">Nodes, Tasks and Other Slurm Stuff 4</div>\n",
     "\n",
     "<img src=\"static/simple-cluster-diagram-sshslurmlogin.png\" alt=\"ssh to login node\" width=\"800\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<div style=\"text-align: right\">Nodes, Tasks and Other Slurm Stuff 11</div>\n",
+    "\n",
+    "### A review of launching jobs (`srun` vs `sbatch` and `salloc`)\n",
+    "\n",
+    "TL;DR:\n",
+    "* `sbatch` requests resources for use with a script\n",
+    "* `salloc` requests resources to be used interactively\n",
+    "* `srun` runs programs/scripts using resources requested by `sbatch` and `salloc`\n",
+    "\n",
+    "`srun` will execute `ntasks` instances of the same command/script/program.\n",
+    "\n",
+    "Example:\n",
+    "1. Try requesting an interactive session with `salloc --ntasks=4 --cpus-per-task=2 --nodes=4`\n",
+    "    * Requests 4 tasks with 2 CPU cores each. Each task is located on a different node.\n",
+    "2. Then, execute the `hostname` command\n",
+    "3. Try `hostname`, but with `srun` i.e. `srun hostname`"
    ]
   },
   {
@@ -283,7 +300,55 @@
    "source": [
     "<div style=\"text-align: right\">Nodes, Tasks and Other Slurm Stuff 6</div>\n",
     "\n",
-    "<img src=\"static/simple-cluster-diagram-sbatchnodes2script.png\" alt=\"Example sbatch command\" width=\"800\">"
+    "<img src=\"static/simple-cluster-diagram-sbatchnodes2script.png\" alt=\"Example sbatch command\" width=\"800\"><br>\n",
+    "\n",
+    "The `BatchHost` executes the commands in `script.sh`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<div style=\"text-align: right\">Nodes, Tasks and Other Slurm Stuff 6</div>\n",
+    "\n",
+    "### How does `sbatch/salloc` and `srun` work together?\n",
+    "<img src=\"static/salloc-3node-diagram.png\" alt=\"salloc requesting 3 nodes diagram\" width=\"800\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<div style=\"text-align: right\">Nodes, Tasks and Other Slurm Stuff 6</div>\n",
+    "\n",
+    "A command/script/program will be executed on `BatchHost` **only**\n",
+    "\n",
+    "<img src=\"static/salloc-3node-diagram-hostname.png\" alt=\"hostname command run on 3 nodes\" width=\"800\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<div style=\"text-align: right\">Nodes, Tasks and Other Slurm Stuff 6</div>\n",
+    "\n",
+    "To use the other nodes, execute `srun hostname`.\n",
+    "\n",
+    "`BatchHost` will send the `hostname` command to the remaining tasks to be executed as well.\n",
+    "\n",
+    "<img src=\"static/salloc-3node-diagram-srunhostname.png\" alt=\"hostname command run on 3 nodes\" width=\"800\">"
    ]
   },
   {
@@ -296,6 +361,7 @@
    "source": [
     "<div style=\"text-align: right\">Nodes, Tasks and Other Slurm Stuff 7</div>\n",
     "\n",
+    "### Requesting multiple nodes doesn't guarantee they will all be used!\n",
     "Nodes cannot collaborate on problems unless they are running a program designed that way."
    ]
   },
@@ -346,6 +412,8 @@
     "\n",
     "### What are tasks?\n",
     "Tasks are a collection of resources (CPU cores, GPUs) expected to perform the same \"task\", or used by a single program e.g., via threads, Python multiprocessing, or OpenMP.\n",
+    "\n",
+    "Tasks not equivalent to no. of CPUs!<br>\n",
     "<img src=\"static/tasks-diagram1.png\" alt=\"Tasks diagram\" width=\"400\">"
    ]
   },
@@ -425,24 +493,24 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "source": [
-    "<div style=\"text-align: right\">Nodes, Tasks and Other Slurm Stuff 11</div>\n",
-    "\n",
-    "### A review of launching jobs (`srun` vs `sbatch` and `salloc`)\n",
-    "\n",
-    "TL;DR:\n",
-    "* `sbatch` requests resources for use with a script\n",
-    "* `salloc` requests resources to be used interactively\n",
-    "* `srun` runs programs/scripts using resources requested by `sbatch` and `salloc`\n",
-    "    * When run \"inside\" a job, `srun` will use the resources requested in the parent request\n",
-    "    * When run \"outside\" a job, `srun` will need to be passed the resource request e.g. `--ntasks`\n",
-    "\n",
-    "`srun` will execute `ntasks` instances of the same command/script/program. e.g.,\n",
-    "\n",
-    "`srun echo hello world` will run `echo` equal to the number of tasks requested."
+    "Example 2:\n",
+    "Exit your `salloc` session and try running srun outside of `salloc`:\n",
+    "* `srun --ntasks=4 --cpus-per-task=2 --nodes=4 hostname`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "i.e. `srun` can also be used outside of `salloc` or `sbatch`, but the resource request must be explicit!"
    ]
   },
   {
@@ -524,7 +592,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "skip"
     }
    },
    "source": [
